Add icon to site title

--- a/cart.html
+++ b/cart.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Cart | LuxeWear</title>
+    <link rel="icon" type="images/png" href="images/tommy.PNG">
     <meta name="description"
         content="Your Cart – LuxeWear minimalist mockup e-commerce store. Front-end project showing product display and UI.">
 
