--- a/product.html
+++ b/product.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Essential Minimalist Sneaker | LuxeWear</title>
+    <link rel="icon" type="images/png" href="images/tommy.PNG">
     <meta name="description"
         content="Essential Minimalist Sneaker – product details, price, and features. A portfolio e-commerce mockup built with HTML, CSS, and JavaScript.">
     <link rel="stylesheet" href="css/styles.css">
