--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LuxeWear</title>
+    <link rel="icon" type="images/png" href="images/tommy.PNG">
     <meta name="description"
         content="LuxeWear – A minimalist e-commerce sneaker mockup website built for portfolio demonstration. Clean UI, SEO structure, and responsive design.">
     <meta name="keywords" content="ecommerce, sneakers, web developer portfolio, minimalist shoes, HTML CSS JS project">
